; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_manager.c_disable_printk_ratelimit.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_manager.c_disable_printk_ratelimit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"kernel/printk_devkmsg\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"on\00", align 1
@.str.2 = private unnamed_addr constant [50 x i8] c"Failed to set sysctl kernel.printk_devkmsg=on: %m\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @disable_printk_ratelimit() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @sysctl_write(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32 %2, i32* %1, align 4
  %3 = load i32, i32* %1, align 4
  %4 = icmp slt i32 %3, 0
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load i32, i32* %1, align 4
  %7 = call i32 @log_debug_errno(i32 %6, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.2, i64 0, i64 0))
  br label %8

8:                                                ; preds = %5, %0
  ret void
}

declare dso_local i32 @sysctl_write(i8*, i8*) #1

declare dso_local i32 @log_debug_errno(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
